Convert book 1 to german translation (translated text from https://www.fanfiktion.de/s/4cb8beb50000203e067007d0/1/Harry-Potter-und-die-Methoden-des-rationalen-Denkens

--- a/hp-book.sty
+++ b/hp-book.sty
@@ -9,6 +9,7 @@
 \ProcessOptions % process now as some are used immediately
 
 \documentclass[12pt,extrafontsizes,twoside,openright,final,msmallroyalvopaper]{memoir}
+\usepackage[german]{babel}
 
 \input{hp-header}
 
