--- a/hp-header.tex
+++ b/hp-header.tex
@@ -12,7 +12,7 @@
 \usepackage{eso-pic,picture}
 
 \usepackage[bookmarks=true,unicode=true,pdfborder={0 0 0},
-	pdftitle={Harry Potter and the Methods of Rationality},
+	pdftitle={Harry James Potter-Evans-Verres und die Methoden des rationalen Denkens},
 	pdfauthor={LessWrong}, breaklinks={true},
 	pdfkeywords={Harry Potter, rationality},pdfencoding=auto
 ]{hyperref}
