--- a/hp-intro.tex
+++ b/hp-intro.tex
@@ -21,11 +21,11 @@
 {\hpfont
 \Huge\MakeUppercase{Harry Potter}\vspace*{0.5cm}
 
-\Large\MakeUppercase{and the Methods of Rationality} %
+\Large\MakeUppercase{und die Methoden des rationalen Denkens} %
 
 \includegraphics[scale=0.5]{bubble0.png}
 
-\Large BY \vspace*{.25cm}
+%\Large BY \vspace*{.25cm}
 
 \huge \MakeUppercase{Eliezer Yudkowsky}%
 
@@ -35,45 +35,6 @@
 \fullvolumetitle{\volumenumber}
 }
 
-\vspace{3cm}
-Find the book online, with author’s notes, fan art and other info at:\\
-\url{http://hpmor.com} \\
-
 \end{center}
 
 \cleartoverso
-
-\begin{center}
-\vspace*{2cm}
-
-\thispagestyle{empty}
-Based on the characters of
-
-\vspace*{.5cm}
-
-\Large \MakeUppercase{J. K. Rowling} \normalsize
-
-\vspace*{.5cm}
-
-and her books:
-
-\vspace*{.5cm}
-
-{
-        \newcounter{books_list_counter}
-        \def \hpBook #1{
-                \addtocounter{books_list_counter}{1}
-                \textit{Harry Potter and the #1} \par
-                Year \numtoName{\value{books_list_counter}} at Hogwarts
-                \smallskip\par
-        }
-        \hpBook{Philosopher’s Stone}
-        \hpBook{Chamber of Secrets}
-        \hpBook{Prisoner of Azkaban}
-        \hpBook{Goblet of Fire}
-        \hpBook{Order of the Phoenix}
-        \hpBook{Half-Blood Prince}
-        \hpBook{Deathly Hallows}
-}
-\end{center}
-\cleartorecto% FIXME: For some reason, without this the contents ends up on a verso page (an extra blank page is added)
