--- a/hp-title.tex
+++ b/hp-title.tex
@@ -14,10 +14,11 @@
   \resizebox{.95\hptitlewidth}{!}{\textls[20]{RATIONALITY}}%
   \vskip 8mm%
   \color{white}%
-  \resizebox{.5\hptitlewidth}{!}{\textls[50]{\scshape{}by Eliezer Yudkowsky}}%
+  \resizebox{.5\hptitlewidth}{!}{\textls[50]{\scshape{} Eliezer Yudkowsky}}%
   \vfill%
   \textls[50]{\scshape #2}%
   \color{black}%
   \vskip 1cm\ %
 }
-\providecommand{\fullvolumetitle}[1]{Book #1: \volumetitle}
+\providecommand{\fullvolumetitle}[1]{Buch #1: \volumetitle}
+%und die Methoden des rationalen Denkens
