--- a/hpmor-1.tex
+++ b/hpmor-1.tex
@@ -22,6 +22,7 @@
 \include{chapters/hpmor-chapter-008}
 \include{chapters/hpmor-chapter-009}
 \include{chapters/hpmor-chapter-010}
+\include{chapters/hpmor-chapter-011}
 \include{chapters/hpmor-chapter-012}
 \include{chapters/hpmor-chapter-013}
 \include{chapters/hpmor-chapter-014}
@@ -33,5 +34,5 @@
 \include{chapters/hpmor-chapter-020}
 \include{chapters/hpmor-chapter-021}
 
-\include{hp-colophon}
+%\include{hp-colophon}
 \end{document}
